--- a/Makefile.in
+++ b/Makefile.in
@@ -450,7 +450,7 @@ CCASDEPMODE = @CCASDEPMODE@
 CCASFLAGS = @CCASFLAGS@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
-CPPFLAGS = @CPPFLAGS@
+CPPFLAGS = @CPPFLAGS@ -I$(HOME)/src/rdma-core/build/include
 CSCOPE = @CSCOPE@
 CTAGS = @CTAGS@
 CUDA_H_PATH = @CUDA_H_PATH@
@@ -479,7 +479,10 @@ INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LD = @LD@
-LDFLAGS = @LDFLAGS@
+
+# Override to use custom rdma-core headers and libraries
+LDFLAGS = @LDFLAGS@ -L$(HOME)/src/rdma-core/build/lib \
+	-Wl,-rpath=$(HOME)/src/rdma-core/build/lib
 LIBEFA = @LIBEFA@
 LIBMATH = @LIBMATH@
 LIBMLX5 = @LIBMLX5@
@@ -591,29 +594,29 @@ bin_SCRIPTS = run_perftest_loopback run_perftest_multi_devices
 @IS_FREEBSD_FALSE@LIBMLX4 = 
 @IS_FREEBSD_TRUE@LIBMLX4 = -lmlx4
 rsocket_client_lat_SOURCES = src/rsocket_client_lat.c
-rsocket_client_lat_LDADD = libperftest.a $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
+rsocket_client_lat_LDADD = libperftest.a -lrdmacm $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
 rsocket_server_lat_SOURCES = src/rsocket_server_lat.c
-rsocket_server_lat_LDADD = libperftest.a $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
+rsocket_server_lat_LDADD = libperftest.a -lrdmacm $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
 rsocket_client_bw_SOURCES = src/rsocket_client_bw.C
-rsocket_client_bw_LDADD = libperftest.a $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
+rsocket_client_bw_LDADD = libperftest.a -lrdmacm $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
 rsocket_server_bw_SOURCES = src/rsocket_server_bw.C
-rsocket_server_bw_LDADD = libperftest.a $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
+rsocket_server_bw_LDADD = libperftest.a -lrdmacm $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
 ib_write_lat_SOURCES = src/write_lat.c
-ib_write_lat_LDADD = libperftest.a $(LIBMATH)  $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
+ib_write_lat_LDADD = libperftest.a -lrdmacm $(LIBMATH)  $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
 ib_write_bw_SOURCES = src/write_bw.c
-ib_write_bw_LDADD = libperftest.a $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
+ib_write_bw_LDADD = libperftest.a -lrdmacm $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
 @HAVE_RAW_ETH_FALSE@raw_ethernet_bw_SOURCES = 
 @HAVE_RAW_ETH_TRUE@raw_ethernet_bw_SOURCES = src/raw_ethernet_send_bw.c
 @HAVE_RAW_ETH_FALSE@raw_ethernet_bw_LDADD = 
-@HAVE_RAW_ETH_TRUE@raw_ethernet_bw_LDADD = libperftest.a $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
+@HAVE_RAW_ETH_TRUE@raw_ethernet_bw_LDADD = libperftest.a -lrdmacm $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
 @HAVE_RAW_ETH_FALSE@raw_ethernet_lat_SOURCES = 
 @HAVE_RAW_ETH_TRUE@raw_ethernet_lat_SOURCES = src/raw_ethernet_send_lat.c
 @HAVE_RAW_ETH_FALSE@raw_ethernet_lat_LDADD = 
-@HAVE_RAW_ETH_TRUE@raw_ethernet_lat_LDADD = libperftest.a $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
+@HAVE_RAW_ETH_TRUE@raw_ethernet_lat_LDADD = libperftest.a -lrdmacm $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
 @HAVE_RAW_ETH_TRUE@raw_ethernet_burst_lat_SOURCES = src/raw_ethernet_send_burst_lat.c
-@HAVE_RAW_ETH_TRUE@raw_ethernet_burst_lat_LDADD = libperftest.a $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
+@HAVE_RAW_ETH_TRUE@raw_ethernet_burst_lat_LDADD = libperftest.a -lrdmacm $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
 @HAVE_RAW_ETH_TRUE@raw_ethernet_fs_rate_SOURCES = src/raw_ethernet_fs_rate.c
-@HAVE_RAW_ETH_TRUE@raw_ethernet_fs_rate_LDADD = libperftest.a $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
+@HAVE_RAW_ETH_TRUE@raw_ethernet_fs_rate_LDADD = libperftest.a -lrdmacm $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-am
 
