--- a/Makefile.in
+++ b/Makefile.in
@@ -132,6 +132,7 @@ bin_PROGRAMS = ib_write_lat$(EXEEXT) ib_write_bw$(EXEEXT) \
 	rsocket_client_bw$(EXEEXT) rsocket_server_bw$(EXEEXT) \
 	rvma_mailbox_server$(EXEEXT) rvma_mailbox_client$(EXEEXT) \
 	rvsocket_client_lat$(EXEEXT) rvsocket_server_lat$(EXEEXT) \
+	rvsocket_server_dgram$(EXEEXT) rvsocket_client_dgram$(EXEEXT) \
 	$(am__EXEEXT_1) $(am__EXEEXT_2)
 @HAVE_RAW_ETH_TRUE@am__append_5 = src/raw_ethernet_resources.c
 @HAVE_RAW_ETH_TRUE@am__append_6 = src/raw_ethernet_resources.h
@@ -274,11 +275,23 @@ rvma_mailbox_server_OBJECTS = $(am_rvma_mailbox_server_OBJECTS)
 rvma_mailbox_server_DEPENDENCIES = libperftest.a $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1)
+am_rvsocket_client_dgram_OBJECTS =  \
+	src/rvsocket_client_dgram.$(OBJEXT)
+rvsocket_client_dgram_OBJECTS = $(am_rvsocket_client_dgram_OBJECTS)
+rvsocket_client_dgram_DEPENDENCIES = libperftest.a \
+	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
+	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1)
 am_rvsocket_client_lat_OBJECTS = src/rvsocket_client_lat.$(OBJEXT)
 rvsocket_client_lat_OBJECTS = $(am_rvsocket_client_lat_OBJECTS)
 rvsocket_client_lat_DEPENDENCIES = libperftest.a $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1)
+am_rvsocket_server_dgram_OBJECTS =  \
+	src/rvsocket_server_dgram.$(OBJEXT)
+rvsocket_server_dgram_OBJECTS = $(am_rvsocket_server_dgram_OBJECTS)
+rvsocket_server_dgram_DEPENDENCIES = libperftest.a \
+	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
+	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1)
 am_rvsocket_server_lat_OBJECTS = src/rvsocket_server_lat.$(OBJEXT)
 rvsocket_server_lat_OBJECTS = $(am_rvsocket_server_lat_OBJECTS)
 rvsocket_server_lat_DEPENDENCIES = libperftest.a $(am__DEPENDENCIES_1) \
@@ -351,7 +364,9 @@ am__depfiles_remade = src/$(DEPDIR)/cuda_memory.Po \
 	src/$(DEPDIR)/rvma_mailbox_hashmap.Po \
 	src/$(DEPDIR)/rvma_mailbox_server.Po \
 	src/$(DEPDIR)/rvma_socket.Po src/$(DEPDIR)/rvma_write.Po \
+	src/$(DEPDIR)/rvsocket_client_dgram.Po \
 	src/$(DEPDIR)/rvsocket_client_lat.Po \
+	src/$(DEPDIR)/rvsocket_server_dgram.Po \
 	src/$(DEPDIR)/rvsocket_server_lat.Po src/$(DEPDIR)/write_bw.Po \
 	src/$(DEPDIR)/write_lat.Po
 am__mv = mv -f
@@ -397,7 +412,10 @@ SOURCES = $(libperftest_a_SOURCES) $(ib_write_bw_SOURCES) \
 	$(raw_ethernet_lat_SOURCES) $(rsocket_client_bw_SOURCES) \
 	$(rsocket_client_lat_SOURCES) $(rsocket_server_bw_SOURCES) \
 	$(rsocket_server_lat_SOURCES) $(rvma_mailbox_client_SOURCES) \
-	$(rvma_mailbox_server_SOURCES) $(rvsocket_client_lat_SOURCES) \
+	$(rvma_mailbox_server_SOURCES) \
+	$(rvsocket_client_dgram_SOURCES) \
+	$(rvsocket_client_lat_SOURCES) \
+	$(rvsocket_server_dgram_SOURCES) \
 	$(rvsocket_server_lat_SOURCES)
 DIST_SOURCES = $(am__libperftest_a_SOURCES_DIST) \
 	$(ib_write_bw_SOURCES) $(ib_write_lat_SOURCES) \
@@ -408,7 +426,10 @@ DIST_SOURCES = $(am__libperftest_a_SOURCES_DIST) \
 	$(rsocket_client_bw_SOURCES) $(rsocket_client_lat_SOURCES) \
 	$(rsocket_server_bw_SOURCES) $(rsocket_server_lat_SOURCES) \
 	$(rvma_mailbox_client_SOURCES) $(rvma_mailbox_server_SOURCES) \
-	$(rvsocket_client_lat_SOURCES) $(rvsocket_server_lat_SOURCES)
+	$(rvsocket_client_dgram_SOURCES) \
+	$(rvsocket_client_lat_SOURCES) \
+	$(rvsocket_server_dgram_SOURCES) \
+	$(rvsocket_server_lat_SOURCES)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -626,6 +647,10 @@ noinst_HEADERS = src/get_clock.h src/perftest_communication.h \
 bin_SCRIPTS = run_perftest_loopback run_perftest_multi_devices
 @IS_FREEBSD_FALSE@LIBMLX4 = 
 @IS_FREEBSD_TRUE@LIBMLX4 = -lmlx4
+rvsocket_client_dgram_SOURCES = src/rvsocket_client_dgram.c
+rvsocket_client_dgram_LDADD = libperftest.a -lrdmacm -libverbs $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
+rvsocket_server_dgram_SOURCES = src/rvsocket_server_dgram.c
+rvsocket_server_dgram_LDADD = libperftest.a -lrdmacm -libverbs $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
 rvsocket_client_lat_SOURCES = src/rvsocket_client_lat.c
 rvsocket_client_lat_LDADD = libperftest.a -lrdmacm -libverbs $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
 rvsocket_server_lat_SOURCES = src/rvsocket_server_lat.c
@@ -882,12 +907,24 @@ src/rvma_mailbox_server.$(OBJEXT): src/$(am__dirstamp) \
 rvma_mailbox_server$(EXEEXT): $(rvma_mailbox_server_OBJECTS) $(rvma_mailbox_server_DEPENDENCIES) $(EXTRA_rvma_mailbox_server_DEPENDENCIES) 
 	@rm -f rvma_mailbox_server$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(rvma_mailbox_server_OBJECTS) $(rvma_mailbox_server_LDADD) $(LIBS)
+src/rvsocket_client_dgram.$(OBJEXT): src/$(am__dirstamp) \
+	src/$(DEPDIR)/$(am__dirstamp)
+
+rvsocket_client_dgram$(EXEEXT): $(rvsocket_client_dgram_OBJECTS) $(rvsocket_client_dgram_DEPENDENCIES) $(EXTRA_rvsocket_client_dgram_DEPENDENCIES) 
+	@rm -f rvsocket_client_dgram$(EXEEXT)
+	$(AM_V_CCLD)$(LINK) $(rvsocket_client_dgram_OBJECTS) $(rvsocket_client_dgram_LDADD) $(LIBS)
 src/rvsocket_client_lat.$(OBJEXT): src/$(am__dirstamp) \
 	src/$(DEPDIR)/$(am__dirstamp)
 
 rvsocket_client_lat$(EXEEXT): $(rvsocket_client_lat_OBJECTS) $(rvsocket_client_lat_DEPENDENCIES) $(EXTRA_rvsocket_client_lat_DEPENDENCIES) 
 	@rm -f rvsocket_client_lat$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(rvsocket_client_lat_OBJECTS) $(rvsocket_client_lat_LDADD) $(LIBS)
+src/rvsocket_server_dgram.$(OBJEXT): src/$(am__dirstamp) \
+	src/$(DEPDIR)/$(am__dirstamp)
+
+rvsocket_server_dgram$(EXEEXT): $(rvsocket_server_dgram_OBJECTS) $(rvsocket_server_dgram_DEPENDENCIES) $(EXTRA_rvsocket_server_dgram_DEPENDENCIES) 
+	@rm -f rvsocket_server_dgram$(EXEEXT)
+	$(AM_V_CCLD)$(LINK) $(rvsocket_server_dgram_OBJECTS) $(rvsocket_server_dgram_LDADD) $(LIBS)
 src/rvsocket_server_lat.$(OBJEXT): src/$(am__dirstamp) \
 	src/$(DEPDIR)/$(am__dirstamp)
 
@@ -965,7 +1002,9 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/rvma_mailbox_server.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/rvma_socket.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/rvma_write.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/rvsocket_client_dgram.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/rvsocket_client_lat.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/rvsocket_server_dgram.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/rvsocket_server_lat.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/write_bw.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/write_lat.Po@am__quote@ # am--include-marker
@@ -1338,7 +1377,9 @@ distclean: distclean-am
 	-rm -f src/$(DEPDIR)/rvma_mailbox_server.Po
 	-rm -f src/$(DEPDIR)/rvma_socket.Po
 	-rm -f src/$(DEPDIR)/rvma_write.Po
+	-rm -f src/$(DEPDIR)/rvsocket_client_dgram.Po
 	-rm -f src/$(DEPDIR)/rvsocket_client_lat.Po
+	-rm -f src/$(DEPDIR)/rvsocket_server_dgram.Po
 	-rm -f src/$(DEPDIR)/rvsocket_server_lat.Po
 	-rm -f src/$(DEPDIR)/write_bw.Po
 	-rm -f src/$(DEPDIR)/write_lat.Po
@@ -1417,7 +1458,9 @@ maintainer-clean: maintainer-clean-am
 	-rm -f src/$(DEPDIR)/rvma_mailbox_server.Po
 	-rm -f src/$(DEPDIR)/rvma_socket.Po
 	-rm -f src/$(DEPDIR)/rvma_write.Po
+	-rm -f src/$(DEPDIR)/rvsocket_client_dgram.Po
 	-rm -f src/$(DEPDIR)/rvsocket_client_lat.Po
+	-rm -f src/$(DEPDIR)/rvsocket_server_dgram.Po
 	-rm -f src/$(DEPDIR)/rvsocket_server_lat.Po
 	-rm -f src/$(DEPDIR)/write_bw.Po
 	-rm -f src/$(DEPDIR)/write_lat.Po
