--- a/Makefile.am
+++ b/Makefile.am
@@ -57,7 +57,7 @@ if HABANALABS
 libperftest_a_SOURCES += src/hl_memory.c
 endif
 
-bin_PROGRAMS = ib_write_lat ib_write_bw rsocket_client_lat rsocket_server_lat rsocket_client_bw rsocket_server_bw rvma_mailbox_server rvma_mailbox_client rvsocket_client_stream rvsocket_server_stream rvsocket_server_dgram rvsocket_client_dgram
+bin_PROGRAMS = ib_write_lat ib_write_bw rsocket_client_lat rsocket_server_lat rsocket_client_bw rsocket_server_bw rvma_mailbox_server rvma_mailbox_client rvsocket_client_stream rvsocket_server_stream rvsocket_server_dgram rvsocket_client_dgram rsocket_server_dgram rsocket_client_dgram
 bin_SCRIPTS = run_perftest_loopback run_perftest_multi_devices
 
 if HAVE_RAW_ETH
@@ -97,8 +97,15 @@ rvma_mailbox_client_LDADD = libperftest.a -lrdmacm $(LIBMATH) $(LIBMLX4) $(LIBML
 rsocket_client_lat_SOURCES = src/rsocket_client_lat.c
 rsocket_client_lat_LDADD = libperftest.a -lrdmacm $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
 
+rsocket_client_dgram_SOURCES = src/rsocket_client_dgram.c
+rsocket_client_dgram_LDADD = libperftest.a -lrdmacm $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
+
+
 rsocket_server_lat_SOURCES = src/rsocket_server_lat.c
 rsocket_server_lat_LDADD = libperftest.a -lrdmacm $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
+
+rsocket_server_dgram_SOURCES = src/rsocket_server_dgram.c
+rsocket_server_dgram_LDADD = libperftest.a -lrdmacm $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
 
 rsocket_client_bw_SOURCES = src/rsocket_client_bw.C
 rsocket_client_bw_LDADD = libperftest.a -lrdmacm $(LIBMATH) $(LIBMLX4) $(LIBMLX5) $(LIBEFA)
