first commit/cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,30 @@ src/*.o
 src/.deps/
 .deps/
 install/bin/
+andrew_results/
+autom4te.cache/
+config/
+m4/
+
+libperftest.a
+
+# Make Executables
+
+ib_write_bw
+ib_write_lat
+raw_ethernet_burst_lat
+raw_ethernet_bw
+raw_ethernet_fs_rate
+raw_ethernet_lat
+rsocket_client_bw
+rsocket_client_dgram
+rsocket_client_lat
+rsocket_server_bw
+rsocket_server_dgram
+rsocket_server_lat
+rvma_mailbox_client
+rvma_mailbox_server
+rvsocket_client_dgram
+rvsocket_client_stream
+rvsocket_server_dgram
+rvsocket_server_stream
